Fix autocomplete text color in dark mode

--- a/public/less/dark_theme/wz_theme_dark.css
+++ b/public/less/dark_theme/wz_theme_dark.css
@@ -271,7 +271,15 @@ md-divider.md-default-theme, md-divider {
 .CodeMirror-hints{
   background-color: #16171c !important;
   border-color: #000;
-  color: #dfe5ef;
+  color: #dfe5ef!important;
+}
+
+.CodeMirror-hint{
+  color: #dfe5ef!important;
+}
+
+.CodeMirror-hint:hover{
+  background-color: #25262E;
 }
 
 .wz-input-text {
